fixing collapsable quote CSS for 219 (yospos)

--- a/src/219.css
+++ b/src/219.css
@@ -516,3 +516,15 @@ td.postbody iframe {
 	mask-image: linear-gradient(180deg, #000 20%, transparent);
 	color: #57FF57;
 }
+
+tr.altcolor1, tr.altcolor2, tr.seen1, tr.seen2 {
+	.collapseInner {
+		background-image: linear-gradient(0deg, #000 55%, transparent);
+		color: #57FF57;
+	}
+
+	.expandFade {
+		mask-image: linear-gradient(180deg, #000 20%, transparent);
+		color: #57FF57;
+	}
+}
